--- a/index.css
+++ b/index.css
@@ -146,29 +146,103 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   }
 
 
-  .seo {
-    position: absolute;
-    top: 50%; 
-    right: 50%;
-    transform: translate(50%,-50%);
-    text-transform: uppercase;
-    font-family: verdana;
-    font-size: 12em;
-    font-weight: 700;
-    color: #f5f5f5;
-    text-shadow: 1px 1px 1px #919191,
-        1px 2px 1px #919191,
-        1px 3px 1px #919191,
-        1px 4px 1px #919191,
-        1px 5px 1px #919191,
-        1px 6px 1px #919191,
-        1px 7px 1px #919191,
-        1px 8px 1px #919191,
-        1px 9px 1px #919191,
-        1px 10px 1px #919191,
-    1px 18px 6px rgba(16,16,16,0.4),
-    1px 22px 10px rgba(16,16,16,0.2),
-    1px 25px 35px rgba(16,16,16,0.2),
-    1px 30px 60px rgba(16,16,16,0.4);
+ /* SEO */
+ @layer demo {
+    .highlighted-text-shadow {
+      text-shadow:
+        /* regular text-shadow */
+        0 .15ch 15px var(--shadow),
+        /* text-shadow highlight */
+        0 -2px 0 var(--highlight);
+    }
+  }
+  
+  @layer demo.support {
+    :root {
+      --hue: 320; /* change me */
+      --bg: oklch(35% .3 var(--hue));
+      --text: oklch(85% .1 var(--hue));
+      --shadow: oklch(25% .2 var(--hue));
+      --highlight: oklch(98% .05 var(--hue));
+    }
 }
 
+.seo{
+    font-size: 15vi;
+    letter-spacing: -.15ch;
+    line-height: .75;
+}
+
+
+.seo_card{
+  
+
+    /* From Uiverse.io by Yaya12085 */ 
+.card {
+    width: 100%;
+    border-radius: 0.5rem;
+    background-color: #f9cdff;
+    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+    border: 1px solid transparent;
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    border-top-left-radius: 11px;
+    border-top-right-radius: 11px;
+  }
+  
+  .card a {
+    text-decoration: none
+  }
+  
+  .content {
+    padding: 1.1rem;
+  }
+  
+  .image {
+    img{
+        object-fit: cover;
+        width: 100%;
+        height: auto;
+        border-top-left-radius: 11px;
+        border-top-right-radius: 11px;
+    }
+  }
+  
+  .title {
+    color: #111827;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+    font-weight: 600;
+  }
+  
+  .desc {
+    margin-top: 0.5rem;
+    color: #3d0238;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+  
+  .action {
+    display: inline-flex;
+    margin-top: 1rem;
+    color: #ffffff;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    font-weight: 500;
+    align-items: center;
+    gap: 0.25rem;
+    background-color: #c600dc;
+    padding: 4px 8px;
+    border-radius: 4px;
+  }
+  
+  .action span {
+    transition: .3s ease;
+  }
+  
+  .action:hover span {
+    transform: translateX(4px);
+  }
+  
+  
+  
+}
