--- a/index.css
+++ b/index.css
@@ -6,18 +6,32 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 /* Desktop */
 @media (min-width: 1025px) {
+
+    .live_google_news_btn_mob{
+        display: none;
+    }
     
 }
 
 
 /* Tablet */
 @media (min-width: 768px) and (max-width: 1024px) {
+
+    .live_google_news_btn_mob{
+        display: none;
+    }
+    
   
 }
 
 
 
 @media (max-width: 767px) {
+
+    .live_google_news_btn_desk{
+        display: none;
+    }
+    
 
     .carousel-indicators{
         display: none;
@@ -245,4 +259,24 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   
   
   
+}
+
+.web_story_btn{
+    display: none;
+}
+
+.web_story:hover{
+    img{
+        filter: blur(2px);
+        transition: all 0.5s;
+
+
+    }
+   .web_story_btn{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    display: block;
+    transition: all 0.8s;
+   }
 }
