--- a/index.css
+++ b/index.css
@@ -29,13 +29,28 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 @media (max-width: 767px) {
 
     .live_google_news_btn_desk{
-        display: none;
+        display: none !important;
     }
     
 
     .carousel-indicators{
         display: none;
      }
+
+     .google_new_head{
+        max-width: 80% !important;
+     }
+
+     .web_story:hover{
+
+       
+    
+        img{
+            filter: blur(0px) !important;
+    
+    
+        }
+    }
             
 }
 
@@ -49,6 +64,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     background-color: #fff;
     color: #697e91;
     width: 100%;
+    margin-bottom: 5px;
+    border: 3px solid #0062b8;
   }
   
   .plan strong {
@@ -266,6 +283,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 }
 
 .web_story:hover{
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     img{
         filter: blur(2px);
         transition: all 0.5s;
@@ -274,9 +296,231 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     }
    .web_story_btn{
     position: absolute;
-    top: 50%;
-    left: 50%;
+   
     display: block;
     transition: all 0.8s;
+   }
+}
+
+.desk_app{
+    ul{
+        flex-wrap : nowrap
+    }
+    .nav-link{
+        background-color: #63636362;
+        margin-left: 5px;
+        color: #ecf6ff;
+
+    }
+
+    ul::-webkit-scrollbar {
+        display: none;
+      }
+      
+      /* Hide scrollbar for IE, Edge and Firefox */
+      ul {
+        -ms-overflow-style: none;  /* IE and Edge */
+        scrollbar-width: none;  /* Firefox */
+      }
+
+      .android_app{
+        /* From Uiverse.io by juan-sued */ 
+.card {
+    position: relative;
+    width: 190px;
+    height: 254px;
+    background-color: #000;
+    display: flex;
+    flex-direction: column;
+    justify-content: end;
+    padding: 12px;
+    gap: 12px;
+    border-radius: 8px;
+    cursor: pointer;
+  }
+  
+  .card::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    left: -5px;
+    margin: auto;
+    width: 200px;
+    height: 264px;
+    border-radius: 10px;
+    background: linear-gradient(-45deg, red 0%, yellow 100%);
+    z-index: -10;
+    pointer-events: none;
+    transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+  
+  .card::after {
+    content: "";
+    z-index: -1;
+    position: absolute;
+    inset: 0;
+    background: linear-gradient(-45deg, red 0%, yellow 100%);
+    transform: translate3d(0, 0, 0) scale(0.95);
+    filter: blur(20px);
+  }
+  
+  .heading {
+    font-size: 20px;
+    text-transform: capitalize;
+    font-weight: 700;
+  }
+  
+  .card p:not(.heading) {
+    font-size: 14px;
+  }
+  
+  .card p:last-child {
+    color: #e81cff;
+    font-weight: 600;
+  }
+  
+  .card:hover::after {
+    filter: blur(30px);
+  }
+  
+  .card:hover::before {
+    transform: rotate(-90deg) scaleX(1.34) scaleY(0.77);
+  }
+  
+      }
+
+   .ios_app{
+        /* From Uiverse.io by brunoguyy12 */ 
+
+        .card {
+            position: relative;
+            width: 190px;
+            height: 254px;
+            background-color: #000;
+            display: flex;
+            flex-direction: column;
+            justify-content: end;
+            padding: 12px;
+            gap: 12px;
+            border-radius: 8px;
+            cursor: pointer;
+          }
+          
+          .card::before {
+            content: "";
+            position: absolute;
+            inset: 0;
+            left: -5px;
+            margin: auto;
+            width: 200px;
+            height: 264px;
+            border-radius: 10px;
+            background: linear-gradient(-45deg, #e81cff 0%, #40c9ff 100%);
+            z-index: -10;
+            pointer-events: none;
+            transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+          }
+          
+          .card::after {
+            content: "";
+            z-index: -1;
+            position: absolute;
+            inset: 0;
+            background: linear-gradient(-45deg, #fc00ff 0%, #00dbde 100%);
+            transform: translate3d(0, 0, 0) scale(0.95);
+            filter: blur(20px);
+          }
+          
+          .heading {
+            font-size: 20px;
+            font-weight: 700;
+          }
+          
+          .card p:not(.heading) {
+            font-size: 14px;
+          }
+          
+          .card p:last-child {
+            color: #e81cff;
+            font-weight: 600;
+          }
+          
+          .card:hover::after {
+            filter: blur(30px);
+          }
+          
+          .card:hover::before {
+            transform: rotate(-90deg) scaleX(1.34) scaleY(0.77);
+          }
+
+
+   }   
+
+   .windows_app{
+        /* From Uiverse.io by brunoguyy12 */ 
+
+        .card {
+            position: relative;
+            width: 190px;
+            height: 254px;
+            background-color: #000000;
+            display: flex;
+            flex-direction: column;
+            justify-content: end;
+            padding: 12px;
+            gap: 12px;
+            border-radius: 8px;
+            cursor: pointer;
+          }
+          
+          .card::before {
+            content: "";
+            position: absolute;
+            inset: 0;
+            left: -5px;
+            margin: auto;
+            width: 200px;
+            height: 264px;
+            border-radius: 10px;
+            background: linear-gradient(-45deg, #cc208e 0%, #6713d2 100%);
+            z-index: -10;
+            pointer-events: none;
+            transition: all 0.6s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+          }
+          
+          .card::after {
+            content: "";
+            z-index: -1;
+            position: absolute;
+            inset: 0;
+            background: linear-gradient(-45deg, #cc208e 0%, #6713d2 100%);
+            transform: translate3d(0, 0, 0) scale(0.95);
+            filter: blur(20px);
+          }
+          
+          .heading {
+            font-size: 20px;
+            font-weight: 700;
+          }
+          
+          .card p:not(.heading) {
+            font-size: 14px;
+          }
+          
+          .card p:last-child {
+            color: #cc208e;
+            font-weight: 600;
+          }
+          
+          .card:hover::after {
+            filter: blur(30px);
+          }
+          
+          .card:hover::before {
+            transform: rotate(-90deg) scaleX(1.34) scaleY(0.77);
+          }
+
+
+  
    }
 }
