--- a/index.css
+++ b/index.css
@@ -529,9 +529,33 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
     font-size: 2.5rem;
     width: 80%;
     font-weight: 700;
-    background: linear-gradient(#9F1AE2, #2937F0);
+    background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
     -webkit-text-fill-color: transparent;
     -webkit-background-clip: text;
     background-clip: text;
     margin-bottom: 10px;
+}
+
+.display_blog_main{
+  .scroll-container {
+    background-color: #f1faff;
+    overflow: auto;
+    white-space: nowrap;
+  }
+  
+  .scroll-container img {
+    height: 200px;
+    width: 200px;
+    mix-blend-mode: multiply;
+    
+  }
+  .scroll-container::-webkit-scrollbar {
+    display: none;
+  }
+  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .scroll-container {
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+  }
 }
