--- a/index.css
+++ b/index.css
@@ -633,3 +633,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
 
 }
+
+.diwali{
+    background-image: linear-gradient(to right, #6a11cb 0%, #2575fc 100%);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+    background-clip: text;
+    margin-top: 0px;
+}
